# dynamoscan

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile
dynamoscan/: __init__.py  _types.py  cli.py  cli_trace.py  docker_manager.py  isolated_tracer.py  ml_loader.py  scanner.py  syscall_analyzer.py  utils.py
tests/: conftest.py  test_dill.py  test_joblib.py  test_keras.py  test_npy.py  test_pickle.py  test_saved_model.py  test_torch.py
tests/utils/: io.py  malicious_payload.py  pytorch_injector.py
