[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamoscan"
version = "0.0.2"
description = "A dynamic scanner Python module to detect suspicious system calls"
authors = [
    { name = "Dimitri K. Teguia", email = "mail@dkteg.de" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix"
]
dependencies = [
    "torch==2.8.0",
    "tensorflow-cpu==2.20.0",
    "tf-keras==2.20.1",
    "dill==0.4.0",
    "joblib==1.5.2",
    "cloudpickle==3.1.1", # hugging face core libraries
    "transformers==4.51.0",
    "accelerate==1.10.1",
    "tokenizers==0.21.0",
    "ultralytics==8.3.202",
    "pyannote-audio==3.4.0",
    "zshot==0.0.11",
    "gliner==0.2.22",
    "diffusers==0.35.1",
    "orjson==3.11.3",
    "pytest==8.4.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["dynamoscan*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "examples*"]

[tool.pytest.ini_options]
pythonpath = "."

[project.scripts]
dynamoscan = "dynamoscan.cli:main"
dynamoscan-trace = "dynamoscan.cli_trace:main"
