[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamoscan"
version = "0.0.2"
description = "A dynamic scanner Python module to detect suspicious system calls"
authors = [
    { name = "Dimitri K. Teguia", email = "mail@dkteg.de" }
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Unix"
]
dependencies = [
    "torch>=2.8.0",
    "tensorflow-cpu==2.20.0",
    "tf-keras==2.20.1",
    "dill==0.4.0",
    "joblib==1.5.2",
    "cloudpickle==3.1.1",
    "transformers>=4.55.0",
    "accelerate==1.10.1",
    "tokenizers==0.21.1",
    "ultralytics==8.3.202",
    "pyannote-audio==3.4.0",
    "deepspeed==0.17.6",
    "zshot==0.0.11",
    "diffusers==0.35.1",
    "orjson==3.11.3",
    "pytest==8.4.2",
    "flair==0.15.1",
    "simpletransformers==0.70.5",
    #    "yolov5==7.0.14",
    #    "axolotl==0.12.2",
    #    "fairseq==0.12.2",
    "torchao==0.12.0",
    "fschat==0.2.36",
    "alignment==1.0.10",
    "pytorch_lightning==2.5.5",
    "neural_compressor==3.5",
    "attrdict==2.0.1",
    "numpy>=1.24.4,<=2.3.3",
    "reranker==0.2.3",
    "torch-geometric==2.6.1",
    "transquest==1.1.1",
    "datasets==4.1.1",
    "clip @ git+https://github.com/openai/CLIP.git@main"
]


[tool.setuptools.packages.find]
where = ["."]
include = ["dynamoscan*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.exclude-package-data]
"*" = ["tests*", "examples*"]

[tool.pytest.ini_options]
pythonpath = "."

[project.scripts]
dynamoscan = "dynamoscan.cli:main"
dynamoscan-trace = "dynamoscan.cli_trace:main"
